ready for portfolio deployment